--- a/Lookif.Component.DateTimePicker/Lookif.Component.DateTimePicker.csproj
+++ b/Lookif.Component.DateTimePicker/Lookif.Component.DateTimePicker.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
@@ -14,7 +14,9 @@
 		<NeutralLanguage>fa-IR</NeutralLanguage>
 		<PackageLicenseFile>License.txt</PackageLicenseFile>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-
+		<AssemblyVersion>2.0.0</AssemblyVersion>
+		<FileVersion>2.0.0</FileVersion>
+		<Version>2.0.0</Version>
 	</PropertyGroup>
 
 
@@ -23,21 +25,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="DNTPersianUtils.Core" Version="5.4.9" />
-		<PackageReference Include="Microsoft.Extensions.Localization" Version="6.0.12" />
+		<PackageReference Include="DNTPersianUtils.Core" Version="6.6.0" />
+		<PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.13" />
 
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.12" />
-		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-		<PackageReference Include="Microsoft.Extensions.FileProviders.Composite" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.12" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.13" />
+		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.3.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Composite" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.13" />
 	</ItemGroup>
 	<ItemGroup>
 		<EmbeddedResource Include="wwwroot\*" /> 
-	</ItemGroup>
-	<ItemGroup>
-	  <None Include="..\License.txt">
-	    <Pack>True</Pack>
-	    <PackagePath>\</PackagePath>
-	  </None>
 	</ItemGroup>
 </Project>
